markdown: fix alignment error

--- a/arsnova.click/client/plugins/splashscreen/styles/splashscreen.scss
+++ b/arsnova.click/client/plugins/splashscreen/styles/splashscreen.scss
@@ -72,7 +72,6 @@
   text-align: justify;
   text-align: -webkit-left;
   */
-  text-align: left;
 
   p {
     margin-left: 0;
